# DP-Rust-SimpleGeometry

./: .gitattributes  .gitignore  Cargo.toml  README.md
.run/: Run editor.run.xml  Run executor.run.xml  Run export-cli.run.xml  Test Intelligent-Five-Colors-Chess.run.xml
data/: resources.registry  scene.rgs
editor/: Cargo.toml
editor/src/: main.rs
executor/: Cargo.toml
executor-android/: Cargo.toml
executor-android/src/: lib.rs
executor-wasm/: Cargo.toml  index.html  script.js
executor/src/: main.rs
export-cli/: Cargo.toml
export-cli/src/: main.rs
game/: Cargo.toml
game-dylib/: Cargo.toml
game-dylib/src/: lib.rs
game/src/: lib.rs  role_move.rs
