
[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyroxed_base = { workspace = true }
dp_rust_simplegeometry = { path = "../game", optional = true }

[features]
default = ["dp_rust_simplegeometry", "fyroxed_base/default"]
dylib = ["fyroxed_base/dylib_engine"]
